# tarpeydev/admin.py
@@ -3,16 +3,13 @@ import functools
 from flask import (
     Blueprint, flash, g, redirect, render_template, request, session, url_for
 )
-from flask_swagger_ui import get_swaggerui_blueprint
+
 from werkzeug.security import check_password_hash, generate_password_hash
 
 from tarpeydev.db import get_users
 
 bp = Blueprint('admin', __name__, url_prefix='/admin')
-swag_bp = get_swaggerui_blueprint(
-    '/swagger',
-    'http://127.0.0.1:5000/static/swagger.json',
-)
+
 
 @bp.route('/register', methods=('GET', 'POST'))
 def register():
@@ -72,7 +69,7 @@ def login():
             session.clear()
             session['user_id'] = user.get('_id')
             return redirect(url_for('swagger_ui.show'))
-        
+
         flash(error)
 
     return render_template('admin/login.html')
@@ -104,38 +101,3 @@ def login_required(view):
         return view(**kwargs)
 
     return wrapped_view
-
-
-@swag_bp.before_request
-def restrict_swagger():
-    if g.user is None:
-        return redirect(url_for('admin.login'))
-
-
-@swag_bp.route('/adduser', methods=['POST'])
-@login_required
-def create():
-    return
-
-
-@swag_bp.route('/readuser/<username>', methods=['GET'])
-@login_required
-def read(username):
-    dbu, client = get_users()
-    user = dbu.users.find_one({"_id": username})
-    if user is not None:
-        return user
-    else:
-        return "Error!"
-
-
-@swag_bp.route('/updateuser', methods=['POST', 'PUT'])
-@login_required
-def update():
-    return
-
-
-@swag_bp.route('/deleteuser', methods=['GET', 'DELETE'])
-@login_required
-def delete():
-    return
